# museam

./: CMakeLists.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/database/: databasemanager.cpp  databasemanager.h
src/dialogs/: acquisitiondialog.cpp  acquisitiondialog.h  categorydialog.cpp  categorydialog.h  collectiondialog.cpp  collectiondialog.h  employeedialog.cpp  employeedialog.h  exhibitdialog.cpp  exhibitdialog.h  exhibitiondialog.cpp  exhibitiondialog.h  restorationdialog.cpp  restorationdialog.h  storagedialog.cpp  storagedialog.h
src/models/: acquisitionmodel.cpp  acquisitionmodel.h  categorymodel.cpp  categorymodel.h  collectionmodel.cpp  collectionmodel.h  employeemodel.cpp  employeemodel.h  exhibitionmodel.cpp  exhibitionmodel.h  exhibitmodel.cpp  exhibitmodel.h  restorationmodel.cpp  restorationmodel.h  storagemodel.cpp  storagemodel.h
src/widgets/: collectionwidget.cpp  collectionwidget.h  dashboardwidget.cpp  dashboardwidget.h  employeewidget.cpp  employeewidget.h  exhibitionwidget.cpp  exhibitionwidget.h  exhibitwidget.cpp  exhibitwidget.h  reportswidget.cpp  reportswidget.h  storagewidget.cpp  storagewidget.h
